--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD with SonarQube and Deployment
 
 on:
   push:
@@ -6,28 +6,41 @@ on:
       - main
 
 jobs:
-  test:
+  build-test-sonarqube:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout source code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 'lts/*'
+          node-version: '16'
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test
+      - name: Run Tests and Generate Coverage Report
+        run: |
+          npm install --save-dev jest
+          npx jest --coverage
 
-  build-and-push:
-    needs: test
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@v2
+        with:
+          host: ${{ secrets.SONAR_HOST_URL }}
+          login: ${{ secrets.SONAR_TOKEN }}
+        env:
+          SONAR_SCANNER_OPTS: "-Dsonar.projectKey=your_project_key"
+          NODE_ENV: "test"
+
+  deploy:
+    needs: build-test-sonarqube
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout source code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Log in to Docker Hub
@@ -36,19 +49,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build and Push Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/ci-demo-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/ci-demo-app:latest
 
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to Azure
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ci-demo-app
+          app-name: <AppServiceName>
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: ${{ secrets.DOCKER_USERNAME }}/ci-demo-app:latest
